# rost

./: .gitignore  Cargo.toml  get.js  grammar.ebnf  make.mjs  wasm.json
cli/: Cargo.toml
cli/src/: main.rs
src/: compiler.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  nodes.rs  parser.rs  tokens.rs
